--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="jars/antlr-3.4-complete.jar"/>
 	<classpathentry exported="true" kind="lib" path="jars/commons-cli-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="jars/jruby.jar"/>
+	<classpathentry exported="true" kind="lib" path="tools/jruby.jar"/>
 	<classpathentry exported="true" kind="lib" path="jars/fortress.jar" sourcepath="jars/fortress-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="jars/testbase.jar" sourcepath="jars/testbase-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="jars/jsoftfloat.jar" sourcepath="jars/jsoftfloat-src.zip"/>
