--- a/build.xml
+++ b/build.xml
@@ -74,7 +74,7 @@
 
   <!-- Classpath for external libraries -->
   <property name="jars.path" value="./jars"/>
-  <property name="classpath" value="${jars.path}/${antlr.jar}:${jars.path}/${antlr.ant.jar}:${jars.path}/${cli.jar}:${jars.path}/${jruby.jar}:${jars.path}/${fortress.jar}:${jars.path}/${testbase.jar}:${jars.path}/${jsoftfloat.jar}"/>
+  <property name="classpath" value="${jars.path}/${antlr.jar}:${jars.path}/${antlr.ant.jar}:${jars.path}/${cli.jar}:./tools/${jruby.jar}:${jars.path}/${fortress.jar}:${jars.path}/${testbase.jar}:${jars.path}/${jsoftfloat.jar}"/>
 
   <!-- Options -->
   <property name="debug" value="false"/>
