--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
+projectTitle=MicroTESK
+projectGroup=microtesk
+projectName=microtesk
 #Wed, 29 Apr 2015 16:03:24 +0300
-version=2.3.4-beta-SNAPSHOT
+version=2.3.46-beta-SNAPSHOT
