--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ repositories {
     }
   }
   maven {
+    url "http://forge.ispras.ru:8082/nexus/content/repositories/releases"
+  }
+  maven {
     url "http://forge.ispras.ru:8082/nexus/content/repositories/snapshots"
   }
   mavenCentral();
@@ -104,6 +107,11 @@ dependencies {
   compile 'fortress:fortress:+'
   compile 'testbase:testbase:+'
   compile 'jsoftfloat:jsoftfloat:+'
+
+  checkstyle 'com.puppycrawl.tools:checkstyle:6.12.1'
+  pmd 'net.sourceforge.pmd:pmd-core:5.4.0'
+  pmd 'net.sourceforge.pmd:pmd-java:5.4.0'
+  findbugs 'com.google.code.findbugs:findbugs:3.0.1'
 }
 
 task getZ3(type: Copy) {
@@ -159,7 +167,6 @@ release {
     // Increments build number: "0.2.5-alpha-150428" => "0.2.6-alpha-150428"
     /(^\d+\.\d+\.)(\d+)(-[^-]*)(-[^-]*$)/: { Matcher m, Project p -> m.replaceAll("${ m[0][1] }${ (m[0][2] as int) + 1 }${ m[0][3] }" ) }
   ]
-  
 }
 
 compileJava {
@@ -178,50 +185,22 @@ checkstyle {
 }
 
 findbugs {
-  toolVersion = '3.0.1'
   ignoreFailures = true
-}
-
-findbugsMain {
-  reports {
-    xml.enabled = true
-    html.enabled = false
-  }
 }
 
 pmd {
-  toolVersion = '5.1.3'
   ignoreFailures = true
-    ruleSets = [
-      // The first two better work since it's right in the Javadoc...
-      "rulesets/java/basic.xml",
-      "rulesets/java/braces.xml",
-      "rulesets/java/naming.xml",
-      "rulesets/java/android.xml",
-      "rulesets/java/clone.xml",
-      "rulesets/java/codesize.xml",
-      "rulesets/java/controversial.xml",
-      "rulesets/java/design.xml", 
-      "rulesets/java/finalizers.xml",
-      "rulesets/java/imports.xml",
-      "rulesets/java/j2ee.xml",
-      "rulesets/java/javabeans.xml",
-      "rulesets/java/junit.xml",
-      "rulesets/java/logging-jakarta-commons.xml",
-      "rulesets/java/logging-java.xml",
-      "rulesets/java/migrating.xml",
-      "rulesets/java/optimizations.xml",
-      "rulesets/java/strictexception.xml",
-      "rulesets/java/strings.xml",
-      "rulesets/java/sunsecure.xml",
-      "rulesets/java/typeresolution.xml",
-      "rulesets/java/unusedcode.xml"
-      ]
-  sourceSets = [sourceSets.main]
+  ruleSets = [ "java-android,java-basic,java-braces,java-clone,java-codesize,java-controversial,"
+             + "java-coupling,java-design,java-empty,java-finalizers,java-imports,java-j2ee,"
+             + "java-javabeans,java-junit,java-logging-jakarta-commons,java-logging-java,"
+             + "java-migrating,java-migrating_to_13,java-migrating_to_14,java-migrating_to_15,"
+             + "java-migrating_to_junit4,java-naming,java-optimizations,java-strictexception,"
+             + "java-strings,java-sunsecure,java-typeresolution,java-unnecessary,java-unusedcode"]
+  ruleSetFiles = files("config/pmd/java/comments.xml")
 }
 
 jacoco {
-  toolVersion = "0.7.4.201502262128"
+  toolVersion = "0.7.5.201505241946"
 }
 
 jacocoTestReport {
@@ -231,9 +210,8 @@ jacocoTestReport {
   }
 }
 
-sonarRunner {
-  toolVersion = '2.4'
-  sonarProperties {
+sonarqube {
+  properties {
     property "sonar.host.url", "http://forge.ispras.ru:9000"
     property "sonar.jdbc.url", "jdbc:mysql://localhost:3306/sonar"
     property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
@@ -242,13 +220,10 @@ sonarRunner {
   }
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
 mainClassName = "ru.ispras.microtesk.MicroTESK"
 
 jar {
-  archiveName = 'microtesk.jar'
+  archiveName = projectName + '.jar'
 
   from('LICENSE') {
     into('META-INF/')
@@ -268,20 +243,20 @@ jar {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-  archiveName = 'microtesk-src.jar'
+  archiveName = projectName + '-src.jar'
   from(projectDir) {
-    into('microtesk')
+    into(projectName)
     include('src/')
     include('config/')
   }
 
   from(files { projectDir.listFiles() }.filter { File file -> file.isFile() ? file : null }) {
-    into('microtesk')
+    into(projectName)
   }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-  archiveName = 'microtesk-javadoc.jar'
+  archiveName = projectName + '-javadoc.jar'
   from javadoc.destinationDir
 }
 
@@ -292,7 +267,7 @@ artifacts {
 
 distributions {
   main{
-    baseName = 'microtesk'
+    baseName = projectName
     contents {
       from("src/main/arch/") {
         into("arch")
