build.gradle - jars go to 'lib/jars'

--- a/build.gradle
+++ b/build.gradle
@@ -314,6 +314,8 @@ distributions {
   main{
     baseName = projectName
     contents {
+      rename '(.)*.jar', 'jars/$0.jar'
+
       from("src/main/arch/") {
         into("arch")
       }
