--- a/build.gradle
+++ b/build.gradle
@@ -39,13 +39,12 @@ plugins {
 
 apply plugin: 'os'
 apply plugin: 'java'
+apply plugin: 'java-library-distribution'
 apply plugin: 'antlr'
-apply plugin: 'application'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
 apply plugin: 'jacoco'
-apply plugin: 'sonar-runner'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
