gradle - attempt to fix 2

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
+mainClassName=ru.ispras.microtesk.MicroTESK
 #Wed, 29 Apr 2015 16:03:24 +0300
 version=2.3.46-beta-SNAPSHOT
