build.xml - fix - MICROTESK_HOME for JUnit tests

--- a/build.xml
+++ b/build.xml
@@ -486,6 +486,7 @@
     <junit fork="no" printsummary="yes" showoutput="yes">
       <env key="Z3_PATH" value="${z3.path}"/>
       <env key="CVC4_PATH" value="${cvc4.path}"/>
+      <env key="MICROTESK_HOME" value="${dist}"/>
       <classpath refid="classpath.test"/>
       <formatter type="plain" usefile="false"/>
       <formatter type="xml" usefile="true"/>
