JavaDoc moved to 'doc'

--- a/build.gradle
+++ b/build.gradle
@@ -405,7 +405,7 @@ distributions {
       }
 
       from(javadocJar) {
-        into('javadoc')
+        into('doc')
       }
 
       from('src/main/etc') {
