--- a/build.gradle
+++ b/build.gradle
@@ -366,6 +366,13 @@ task jarModels(type: Jar) {
   }
 }
 
+task copyFilesForRDoc(type: Copy) {
+  from "${project.projectDir}/src/main/ruby"
+  into "${project.projectDir}/build/tmp/rdoc"
+}
+
+distTar.dependsOn.add('copyFilesForRDoc')
+
 distTar.dependsOn.add('jarModels')
 jarModels.dependsOn.add('compileModels')
 compileModels.dependsOn.add('translateCpuDemo')
