--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,10 @@ macOs {
   z3path = 'tools/z3/bin/z3'
 }
 
+configurations {
+  jruby
+}
+
 dependencies {
   testCompile 'junit:junit:4.11'
   testCompile 'hamcrest:hamcrest-core:1.3'
@@ -118,6 +122,7 @@ dependencies {
   antlr 'org.antlr:antlr:3.5'
   compile 'commons-cli:commons-cli:1.2'
   compile 'org.jruby:jruby-complete:1.7.25'
+  jruby 'org.jruby:jruby-complete:1.7.25'
 
   compile 'fortress:fortress:+'
   compile 'testbase:testbase:+'
@@ -371,7 +376,18 @@ task copyFilesForRDoc(type: Copy) {
   into "${project.projectDir}/build/tmp/rdoc"
 }
 
-distTar.dependsOn.add('copyFilesForRDoc')
+task runRDoc(type: JavaExec) {
+  classpath = configurations.jruby
+  main = 'org.jruby.Main'
+  workingDir = "${project.projectDir}/build/tmp/rdoc"
+  args = [
+    "${project.projectDir}/build/tmp/rdoc/rdoc.rb",
+    "${project.projectDir}/build/tmp/rdoc"
+  ]
+}
+
+distTar.dependsOn.add('runRDoc')
+runRDoc.dependsOn.add('copyFilesForRDoc')
 
 distTar.dependsOn.add('jarModels')
 jarModels.dependsOn.add('compileModels')
