build.gradle - attempt to fix

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,17 @@ release {
   ]
 }
 
+String getCurrentDateString()  {
+  new SimpleDateFormat( "yyMMdd" ).format( new Date() )
+}
+
+task unSnapshotVersion.doLast {
+  def version = project.version.toString()
+  version += '-' + getCurrentDateString()
+   project.plugins.getPlugin( net.researchgate.release.ReleasePlugin.class )
+  .updateVersionProperty( version )
+}
+
 String z3
 String z3path
 
