--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
 #Wed, 29 Apr 2015 16:03:24 +0300
-version=2.3.47-beta-160826
+version=2.3.48-beta-SNAPSHOT
