--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,7 @@ dependencies {
   compile 'fortress:fortress:0.4.20-beta-160826'
   compile 'testbase:testbase:0.0.15-alpha-160826'
   compile 'jsoftfloat:jsoftfloat:1.0.2-beta-160826'
+  compile 'coverage:coverage:+'
 
   checkstyle 'com.puppycrawl.tools:checkstyle:6.12.1'
   pmd 'net.sourceforge.pmd:pmd-core:5.4.0'
