--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,7 @@ dependencies {
   compile 'commons-cli:commons-cli:1.2'
   compile 'org.jruby:jruby-complete:1.7.25'
   jruby 'org.jruby:jruby-complete:1.7.25'
+  compile 'org.codehaus.woodstox:wstx-asl:3.2.4'
 
   compile 'fortress:fortress:0.4.20-beta-160826'
   compile 'testbase:testbase:0.0.15-alpha-160826'
